elease: bump version to alpha 0.0.9
后端变更：
- 升级 pom.xml 版本号至 alpha 0.0.9
- 重构 SystemController，系统配置改为从 application.yaml 动态注入
- 精简侧边栏菜单，移除独立的"创建"子页面入口
- 在 SystemController 中补充 alpha 0.0.9 更新日志
- 更新 application.yaml 增加系统信息配置段

前端变更：
- 升级 package.json 版本号至 alpha 0.0.9
- 冰箱/物品分类/物品单位创建从独立页面改为弹窗形式，提升交互体验
- 新增 FridgeCreateDialog 弹窗组件
- 优化 InputDialog 组件，支持无数据场景下的创建操作
- 优化数据中心图表展示与新鲜度算法，新增"长保质期"分类
- 扩充系统图标库
- 清理已废弃的独立创建页面及其路由

数据库：
- 更新数据库初始化脚本